[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cylink"
version = "0.1.3"
description = "Python SDK for the Cylink / Cyanix Intelligence API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/suprosmith-coder/cylink"

[tool.setuptools.packages.find]
where = ["."]
include = ["cylink*"]
