[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cylink"
version = "0.1.7"
description = "Python SDK for the Cylink / Cyanix Intelligence API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/suprosmith-coder/cylink-api"

[tool.setuptools.packages.find]
where = ["."]
include = ["cylink*"]
